--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@ body {
   position: relative;
   max-width: 400px;
   margin: 50px auto 0;
-  background: black;
+  background: white;
   border-radius: 30px;
 }
 
