--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3717,6 +3717,48 @@ footer .footer-social {
 	margin-right: 0;
 }
 
+progress{
+    position:fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height:5px;
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
+    border:none;
+    background:transparent;
+    color:#FFC769;
+}
+progress::-webkit-progress-bar{
+    background:transparent;
+    border-radius:5px;
+}
+progress::-webkit-progress-value{
+    background:#DE900B;
+    border-radius:5px;
+}
+progress::-moz-progress-bar{
+    background:#002c68;
+    border-radius:5px;
+}
+.progress-container{
+    width:100%;
+    background:transparent;
+    position:fixed;
+    top:0;
+    left:0;
+    height:5px;
+    display:block;
+}
+.progress-bar{
+    background:#002c68;
+    width:0%;
+    display:block;
+    height:inherit;
+}
+
+
 
 
 
